Fixed misalignment of voting panel elements after navigating to next/previous image. Minor adjustments to button layout.

--- a/rsc/css/colorbox/colorbox-bootstrap.less
+++ b/rsc/css/colorbox/colorbox-bootstrap.less
@@ -293,16 +293,16 @@
 		font-size: 24px;
 		display: inline-block;
 		vertical-align: middle;
-		padding: 6px 12px;
+		padding: 4px 12px;
 	}
 	#votingLike, span.fa.fa-thumbs-up.voted {
-		padding: 4px 12px 8px;
+		padding: 2px 12px 6px;
 	}
 	#votingNoopinion, span.fa.fa-ban.voted {
-		padding: 5px 12px 7px;
+		padding: 3px 12px 5px;
 	}
 	#votingDontlike, span.fa.fa-thumbs-down.voted {
-		padding: 4px 12px 8px;
+		padding: 2px 12px 6px;
 	}
 	#votingInappropriate + span {
 		margin-right: 6px;
